feat: set up connection with postgres db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,11 @@
 # Application name (optional)
 spring.application.name=tripDesignApp
 
-# Enable H2 Console (to view in-memory DB)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# In-memory H2 database configuration
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
+# Postgres DB set up
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/tripdb
+spring.datasource.username=postgres
 spring.datasource.password=
 
 # JPA / Hibernate settings
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
