--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.username=postgres
 spring.datasource.password=
 
 # JPA / Hibernate settings
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+# application properties
+trip-design-app.allowed-origin=http://localhost:5173
