fix(Trip): participant ids should be populated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # application properties
 trip-design-app.allowed-origin=http://localhost:5173
+
+logging.level.com.lrasata.tripDesignApp=DEBUG
