chore: refactor and update README

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Application name (optional)
-spring.application.name=tripDesignApp
+spring.application.name=tripPlannerAPI
 
 # Postgres DB set up
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/tripdb
@@ -13,4 +13,4 @@ spring.jpa.hibernate.ddl-auto=update
 # application properties
 trip-design-app.allowed-origin=http://localhost:5173
 
-logging.level.com.lrasata.tripDesignApp=DEBUG
+logging.level.com.lrasata.tripPlannerAPI=DEBUG
