--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.lrasata</groupId>
-	<artifactId>tripDesignApp</artifactId>
+	<artifactId>tripPlannerAPI</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>tripDesignApp</name>
+	<name>tripPlannerAPI</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
