feat(user authentication): implement user JWT authentication
feat(user authentication): implement user JWT authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 # application properties
-trip-design-app.allowed-origin=http://localhost:5173
+trip-design-app.allowed-origin=*
 
+# logging
 logging.level.com.lrasata.tripPlannerAPI=DEBUG
+
+# spring security
+security.jwt.secret-key=
+# 1h in millisecond
+security.jwt.expiration-time=3600000
