feat(auth and RBAC): integration + refresh token + logout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,16 @@ spring.jpa.hibernate.ddl-auto=update
 
 # application properties
 trip-design-app.allowed-origin=*
+trip-design-app.super-admin.fullname=
+trip-design-app.super-admin.email=
+trip-design-app.super-admin.password=
 
 # logging
 logging.level.com.lrasata.tripPlannerAPI=DEBUG
 
 # spring security
 security.jwt.secret-key=
-# 1h in millisecond
-security.jwt.expiration-time=3600000
+# access token expiration time: 15 min in millisecond
+security.jwt.access-token.expiration=900000
+# refresh token expiration time: 60 min in millisecond
+security.jwt.refresh-token.expiration=3600000
