--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
 			<version>1.6.3</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- Swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -106,13 +113,13 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>  <!-- Ensure this is up-to-date -->
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>17</source>
+					<target>17</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
-							<version>1.6.3</version>  <!-- Ensure version matches the MapStruct core -->
+							<version>1.6.3</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
