fix: allow frontend to login with credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 # application properties
-trip-design-app.allowed-origin=*
+trip-design-app.allowed-origin=http://localhost:5173
 trip-design-app.super-admin.fullname=
 trip-design-app.super-admin.email=
 trip-design-app.super-admin.password=
