fix: to enable login and lgout capabilities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 # application properties
 trip-design-app.allowed-origin=http://localhost:5173
+# trip-design-app.cookie.secure-attribute should be true in production
+trip-design-app.cookie.secure-attribute=false
+# trip-design-app.cookie.same-site should be true if cross origin + use credentials
+trip-design-app.cookie.same-site=Lax
 trip-design-app.super-admin.fullname=
 trip-design-app.super-admin.email=
 trip-design-app.super-admin.password=
