--- a/.github/workflows/springboot-ci.yml
+++ b/.github/workflows/springboot-ci.yml
@@ -30,8 +30,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Build with Maven skipTests
+        run: mvn clean install -DskipTests
 
       - name: Run tests
         run: mvn test
