--- a/.github/workflows/springboot-ci.yml
+++ b/.github/workflows/springboot-ci.yml
@@ -1,4 +1,4 @@
-name: Spring Boot CI
+name: Spring Boot CI with DB
 
 on:
   push:
@@ -10,6 +10,21 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: tripdb
+          POSTGRES_USER: testuser
+          POSTGRES_PASSWORD: testpass
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - name: Checkout code
@@ -34,4 +49,4 @@ jobs:
         run: mvn clean install -DskipTests
 
       - name: Run tests
-        run: mvn test
+        run: mvn test -Dspring.profiles.active=test
