chore: add lint checking with github actions

--- a/.github/workflows/springboot-ci.yml
+++ b/.github/workflows/springboot-ci.yml
@@ -48,5 +48,8 @@ jobs:
       - name: Build with Maven skipTests
         run: mvn clean install -DskipTests
 
+      - name: Lint check
+        run: mvn spotless:check
+
       - name: Run tests
         run: mvn test -Dspring.profiles.active=test
