chore: add test coverage reporting with gitHub actions
chore: add test coverage reporting with gitHub actions

--- a/.github/workflows/springboot-ci.yml
+++ b/.github/workflows/springboot-ci.yml
@@ -53,3 +53,9 @@ jobs:
 
       - name: Run tests
         run: mvn test -Dspring.profiles.active=test
+
+      - name: Upload coverage report as artifact
+        uses: actions/upload-artifact@v4
+        with:
+            name: jacoco-report
+            path: target/site/jacoco
