--- a/.github/workflows/springboot-ci.yml
+++ b/.github/workflows/springboot-ci.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     services:
@@ -28,7 +27,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -45,20 +44,32 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Build with Maven skipTests
-        run: mvn clean install -DskipTests
-
       - name: Lint check
         run: mvn spotless:check
 
-      - name: Run tests
-        run: mvn test -Dspring.profiles.active=test
+      - name: Wait for Postgres
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for Postgres..."
+            sleep 2
+          done
 
-      - name: Verify
-        run: mvn verify -Dspring.profiles.active=test
+      - name: Build, test & verify
+        run: mvn clean verify -Dspring.profiles.active=test
 
       - name: Upload coverage report as artifact
         uses: actions/upload-artifact@v4
         with:
-            name: jacoco-report
-            path: target/site/jacoco
+          name: jacoco-report
+          path: target/site/jacoco
+
+      - name: Install xmllint
+        run: sudo apt-get update && sudo apt-get install -y libxml2-utils
+
+      - name: Print test coverage percentage
+        run: |
+          COVERED=$(xmllint --xpath "string(//report/counter[@type='INSTRUCTION']/@covered)" target/site/jacoco/jacoco.xml)
+          MISSED=$(xmllint --xpath "string(//report/counter[@type='INSTRUCTION']/@missed)" target/site/jacoco/jacoco.xml)
+          TOTAL=$((COVERED + MISSED))
+          PERCENT=$(awk "BEGIN {printf \"%.2f\", ($COVERED/$TOTAL)*100}")
+          echo "Test Coverage: $PERCENT%"
