--- a/.github/workflows/springboot-ci.yml
+++ b/.github/workflows/springboot-ci.yml
@@ -29,6 +29,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Check NVD_API_KEY secret is set
+        run: |
+          if [ -z "${{ secrets.NVD_API_KEY }}" ]; then
+            echo "❌ NVD_API_KEY secret is missing!"
+            exit 1
+          else
+            echo "✅ NVD_API_KEY secret is set"
+          fi
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -38,11 +47,9 @@ jobs:
       - name: Cache Maven dependencies
         uses: actions/cache@v4
         with:
-          path: |
-            ~/.m2/repository
+          path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          restore-keys: ${{ runner.os }}-maven-
 
       - name: Lint check
         run: mvn spotless:check
@@ -55,7 +62,7 @@ jobs:
           done
 
       - name: Build, test & verify
-        run: mvn clean verify -Dspring.profiles.active=test
+        run: mvn clean verify -Dspring.profiles.active=test -DnvdApiKey=${{ secrets.NVD_API_KEY }}
 
       - name: Upload coverage report as artifact
         uses: actions/upload-artifact@v4
@@ -73,3 +80,12 @@ jobs:
           TOTAL=$((COVERED + MISSED))
           PERCENT=$(awk "BEGIN {printf \"%.2f\", ($COVERED/$TOTAL)*100}")
           echo "Test Coverage: $PERCENT%"
+
+      - name: Run OWASP Dependency-Check
+        run: mvn org.owasp:dependency-check-maven:check -DnvdApiKey=${{ secrets.NVD_API_KEY }}
+
+      - name: Upload OWASP Dependency-Check report
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-check-report
+          path: target/dependency-check-report.*
