feat: set up docker and impl .env handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,29 +2,29 @@
 spring.application.name=tripPlannerAPI
 
 # Postgres DB set up
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/tripdb
-spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 
 
 # application properties
-trip-design-app.allowed-origin=http://localhost:5173
+trip-design-app.allowed-origin=${ALLOWED_ORIGIN}
 # trip-design-app.cookie.secure-attribute should be true in production
-trip-design-app.cookie.secure-attribute=false
+trip-design-app.cookie.secure-attribute=${COOKIE_SECURE_ATTRIBUTE}
 # trip-design-app.cookie.same-site should be true if cross origin + use credentials
-trip-design-app.cookie.same-site=Lax
-trip-design-app.super-admin.fullname=
-trip-design-app.super-admin.email=
-trip-design-app.super-admin.password=
+trip-design-app.cookie.same-site=${COOKIE_SAME_SITE}
+trip-design-app.super-admin.fullname=${SUPER_ADMIN_FULLNAME}
+trip-design-app.super-admin.email=${SUPER_ADMIN_EMAIL}
+trip-design-app.super-admin.password=${SUPER_ADMIN_PASSWORD}
 
 # logging
 logging.level.com.lrasata.tripPlannerAPI=DEBUG
 
 # spring security
-security.jwt.secret-key=
+security.jwt.secret-key=${JWT_SECRET_KEY}
 # access token expiration time: 15 min in millisecond
 security.jwt.access-token.expiration=900000
 # refresh token expiration time: 60 min in millisecond
