feat: added healthcheck with spring actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.access-token.expiration=900000
 # refresh token expiration time: 60 min in millisecond
 security.jwt.refresh-token.expiration=3600000
+
+# Spring boot Actuator exposes /actuator/health
+management.endpoints.web.exposure.include=health
