--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,5 @@ security.jwt.access-token.expiration=900000
 # refresh token expiration time: 60 min in millisecond
 security.jwt.refresh-token.expiration=3600000
 
-# Spring boot Actuator exposes /actuator/health
-management.endpoints.web.exposure.include=health
+# Spring boot Actuator exposes /actuator/health and /actuator/prometheus
+management.endpoints.web.exposure.include=health,prometheus
