fix: configuration allowed origins should be a list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 # application properties
-trip-design-app.allowed-origin=${ALLOWED_ORIGIN}
+trip-design-app.allowed-origins=${ALLOWED_ORIGINS}
 # trip-design-app.cookie.secure-attribute should be true in production
 trip-design-app.cookie.secure-attribute=${COOKIE_SECURE_ATTRIBUTE}
 # trip-design-app.cookie.same-site should be true if cross origin + use credentials
