fix: unit tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 
 # application properties
-trip-design-app.allowed-origin=http://localhost:5173
+trip-design-app.allowed-origins=http://localhost:5173
 # trip-design-app.cookie.secure-attribute should be true in production
 trip-design-app.cookie.secure-attribute=false
 # trip-design-app.cookie.same-site should be true if cross origin + use credentials
