feat: dynamoDB integration for extra info per user
fix: added missing thumbnail key

feat: get images per user from userService WIP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ security.jwt.refresh-token.expiration=3600000
 
 # Spring boot Actuator exposes /actuator/health and /actuator/prometheus
 management.endpoints.web.exposure.include=health,prometheus
+
+# aws region for dynamo db settings
+aws.dynamodb.region=eu-central-1
+aws.dynamodb.table.user-extra-info=staging-files-per-user-metadata
+
