--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,6 @@ management.endpoints.web.exposure.include=health,prometheus
 
 # aws region for dynamo db settings
 aws.dynamodb.region=eu-central-1
-aws.dynamodb.table.user-extra-info=staging-files-per-user-metadata
+aws.dynamodb.table.user-extra-info=staging-files-metadata
+aws.s3.bucket.name=staging-trip-planner-app-media-uploads-bucket
 
