--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,12 @@ security.jwt.refresh-token.expiration=3600000
 # Spring boot Actuator exposes /actuator/health and /actuator/prometheus
 management.endpoints.web.exposure.include=health,prometheus
 
-# aws region for dynamo db settings
-aws.dynamodb.region=eu-central-1
-aws.dynamodb.table.user-extra-info=staging-files-metadata
-aws.s3.bucket.name=staging-trip-planner-app-media-uploads-bucket
+# AWS Region
+aws.region=${AWS_REGION}
+
+# DynamoDB table for storing metadata
+aws.dynamodb.table.metadata.name=${DYNAMODB_TABLE_NAME}
+
+# S3 bucket for storing uploaded images
+aws.s3.bucket.name=${S3_BUCKET_NAME}
 
