fix: cicd pipeline

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -29,3 +29,12 @@ security.jwt.secret-key=testsecret
 security.jwt.access-token.expiration=900000
 # refresh token expiration time: 60 min in millisecond
 security.jwt.refresh-token.expiration=3600000
+
+# AWS Region
+aws.region=eu-central-1
+
+# DynamoDB table for storing metadata
+aws.dynamodb.table.metadata.name=test-files-metadata
+
+# S3 bucket for storing uploaded images
+aws.s3.bucket.name=test-trip-planner-app-media-uploads-bucket
