--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.lrasata</groupId>
 	<artifactId>tripPlannerAPI</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-rc1</version>
 	<name>tripPlannerAPI</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
