fix: OWASP plugin to skip OSS Index requests (keeps CVE scanning via NVD):

--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,8 @@
 				<version>12.1.0</version>
 				<configuration>
 					<nvdApiKey>${nvdApiKey}</nvdApiKey>
+					<cveValidForHours>24</cveValidForHours>
+    				<dataMirroring>false</dataMirroring>
 				</configuration>
 				<executions>
 					<execution>
