--- a/.github/workflows/springboot-ci.yml
+++ b/.github/workflows/springboot-ci.yml
@@ -63,6 +63,9 @@ jobs:
 
       - name: Build, test & verify
         run: mvn clean verify -Dspring.profiles.active=test -DnvdApiKey=${{ secrets.NVD_API_KEY }}
+        env:
+          OSSINDEX_USER: ${{ secrets.OSSINDEX_USER }}
+          OSSINDEX_PASS: ${{ secrets.OSSINDEX_PASS }}
 
       - name: Upload coverage report as artifact
         uses: actions/upload-artifact@v4
@@ -83,6 +86,9 @@ jobs:
 
       - name: Run OWASP Dependency-Check
         run: mvn org.owasp:dependency-check-maven:check -DnvdApiKey=${{ secrets.NVD_API_KEY }}
+        env:
+          OSSINDEX_USER: ${{ secrets.OSSINDEX_USER }}
+          OSSINDEX_PASS: ${{ secrets.OSSINDEX_PASS }}
 
       - name: Upload OWASP Dependency-Check report
         uses: actions/upload-artifact@v4
